[package]
name = "ina233-rs"
version = "0.1.0"
edition = "2021"
authors = ["Maxime Pointet <pixma@pixma.fr>"]
repository = "https://github.com/PixmaNts/ina233-rs"
license = "MIT OR Apache-2.0"
description = "Platform-agnostic Rust driver for the INA233 High-Side or Low-Side Measurement, Bidirectional Current and Power Monitor"
readme = "README.md"
keywords = ["current", "power-monitor", "sensor", "embedded-hal-driver", "ina233"]
categories = ["embedded", "hardware-support", "no-std"]
homepage = "https://github.com/PixmaNts/ina233-rs"
rust-version = "1.75"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
embedded-hal = "1.0"
paste = "1.0"


[dev-dependencies]
embedded-hal-mock = "0.11"
clap = { version = "4.5", features = ["derive", "cargo"] }
linux-embedded-hal = "0.4.0"

[profile.release]
lto = true

[[example]]
name = "reader"
path = "examples/reader.rs"


